@@ -1,8 +1,14 @@
-[b]Version 0.8.4[/b]:
+[b]Version 0.8.5[/b]:
+
+(2013-04-20)
+ * Add two new options for Audio -> Stereo mode: Mono and Reverse.
 
 (2013-04-07)
  * The size actions work even the autoresize is set to never.
  * Set the resize method to never as default.
+
+
+[b]Version 0.8.4[/b]:
 
 (2013-03-15)
  * Change the default value for file and stream cache to 2048.
